fixed scrollbar layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 
 html {
   min-width: 360px;
+  scrollbar-gutter: stable;
 }
 
 .prose .anchor {
